# argu-parser

./: README.md  meson.build
.github/workflows/: build_all.yml  main.yml
examples/simple/: main.cpp  meson.build
src/: meson.build
src/argu/: meson.build  parser.cpp  parser.h
